2004-01-23  Radek Doulik  <rodo@ximian.com>

	* camel-folder.c (folder_changed): use check_junk_for_imap flag

	* camel-session.c: add check_junk_for_imap flag

2004-01-23  Not Zed  <NotZed@Ximian.com>

	* providers/imap/camel-imap-folder.c (IMAP_SMALL_BODY_SIZE):
	removed the meaningless fixme, a butt-retrieved-number is as good
	as any in this case.
	(imap_get_message): revert peterw's change of 2002-07-15, instead
	of checking for online mode here, let get_message do it when you
	retrieve the parts.  This lets a multi-fetch (i.e. large) message
	work more betterer in offline mode.

2004-01-22  Jeremy Katz  <katzj@redhat.com>

	* camel-mime-part.c: Fix prototype to be consistent.

2004-01-21  Not Zed  <NotZed@Ximian.com>

	** See bug #52996.

	* camel-data-cache.c (camel_data_cache_add): put a do-loop around
	the object_bag_reserve stuff, otherwise we can add/abort out of
	sync (i.e. when object_bag_reserve returned a pointer we mustn't
	call add/abort).

	* camel-object.c (camel_object_bag_*): Added some inline doco.

2004-01-20  Not Zed  <NotZed@Ximian.com>

	** See bug #52817.

	* camel-session.c (camel_session_get_password): merged reprompt
	and secret into a flags field, and add more options.  Fixed all
	callers.

	** See bug #52899.

	* camel-gpg-context.c (gpg_ctx_parse_status): use need_id as the
	password key, not userid.

2004-01-19  Siviaah Nallagatla <snallagatla@novell.com>
                                                                                                                             
        * providers/groupwise/camel-gw-listener.c ( remove_calender_tasks_sources,
        modify_calender_tasks_sources) : add port and "/soap" to source uri

2004-01-19  Not Zed  <NotZed@Ximian.com>

	* camel-vee-store.c (change_folder): use a CamelURL to properly
	encode the url we generate.
	(vee_get_folder_info): ditto.
	(vee_get_folder_info): removed unused variable/warning.

	* camel-session.c (vee_provider): Update the provider flags for